--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -6,13 +6,9 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    // background-attachment: fixed;
+    background-attachment: fixed;
     background-color: black;
 }
-
-// .hero__themb {
-
-// }
 
 .hero__bolock {
     padding-top: 320px;
