--- a/src/partials/gallery/gallery.html
+++ b/src/partials/gallery/gallery.html
@@ -1,5 +1,11 @@
-<section class="gallery-black">
-    <div class="container">
-        <div class="gallery"></div>
-    </div>
-</section>
+<section class="gallery-black"> 
+
+        <div class="swiper-container">
+            <div class="swiper-wrapper"></div>
+            
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-pagination"></div>
+        </div>
+    
+  </section>
