--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,6 +4,8 @@
 @import './backdrop';
 @import './about';
 @import './gallery';
+@import './contacts';
+@import './footer';
 @import './common';
 @import './example';
 
