--- a/src/partials/gallery/gallery.html
+++ b/src/partials/gallery/gallery.html
@@ -1,11 +1,13 @@
-<section class="gallery-black"> 
-
+<section class="gallery-block"> 
+    <div class="container">
+        <h2 class="gallery-title">Gallery</h2>
         <div class="swiper-container">
+
             <div class="swiper-wrapper"></div>
             
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
             <div class="swiper-pagination"></div>
         </div>
-    
+    </div>
   </section>
