--- a/src/partials/header/header.html
+++ b/src/partials/header/header.html
@@ -13,7 +13,7 @@
                     <ul class="header-menu__list">
                         <li class="header-menu__list-item"><a href="#">home</a></li>
                         <li class="header-menu__list-item"><a href="#">about</a></li>
-                        <li class="header-menu__list-item"><a href="#">tickets</a></li>
+                        <li class="header-menu__list-item"><a href="#">gallery</a></li>
                         <li class="header-menu__list-item"><a href="#">contacts</a></li>
                     </ul>
         
@@ -49,7 +49,7 @@
                             <a href="#" class="mobile-menu__link">Home</a> 
                         </li> 
                         <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">About</a></li>
-                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">Tickets</a></li> 
+                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">Gallery</a></li> 
                         <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">Contacts</a></li> 
                         <li class="mobile-menu__item"><a href="#" class="mobile-menu__link"></a></li> 
                     </ul> 
