--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -9,19 +9,18 @@
     justify-content: space-between;
 }
 
-.about-block--item {
-    width: 50%;
-    flex-basis: calc(50% - 30px);
-    margin-top: 30px;
-    margin-left: 0;
-}
-
-
 .about-title {
     font-size: 50px;
     line-height: 1.5;
     text-transform: var(--text-transform-upper);
     color: var(--color-secondary-black);
+    margin-bottom: 50px;
+}
+
+.about-block--item {
+    width: 50%;
+    flex-basis: calc(50% - 30px);
+    margin-left: 0;
 }
 
 
