--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -1,10 +1,83 @@
+.contents {
+    padding-bottom: 40px;
+}
+
+.contacts-title {
+    text-transform: var(--text-transform-upper);
+    color: var(--color-secondary-black);
+    font-size: 50px;
+    line-height: 1.5;
+    margin-bottom: 50px;
+}
+
 .contacts-address {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     font-style: normal;
+    margin-top: -30px;
+}
+
+.contacts-location-title {
+    text-transform: var(--text-transform-upper);
+    color: var(--color-secondary-black);
+    padding-bottom: 15px;
+    font-size: 25px;
+    line-height: 1.5;
+    text-align: center;
+}
+
+.contacts-location__item {
+
+    margin-top: 30px;
+}
+
+.contacts-location__li {
+    color: var(--color-secondary-black);
+    font-family: Open Sans;
+    font-size: 18px;
+    line-height: 1.6;
+    font-weight: 500;
+}
+
+.contacts-location__ul {
+    text-align: center;
 }
 
 .contacts-networks {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+}
+
+.contacts-networks__item {
+    margin-right: 10px;
+}
+
+.contacts-networks__item:last-child {
+    margin-right: 0;
+}
+
+.contacts-networks__icon {
+    fill: var(--color-secondary-black);
+}
+
+.contacts-networks__icon:hover {
+    fill: #5e5c5c;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: scale(1.1);
+}
+
+.map {
+    margin-top: 20px;
+}
+
+.map-iframe {
+   min-width: 100%;
+   height: 300px;
+   border: 0;
+}
+
+@media (max-width: 1200px) {
+    .contacts-address {
+      flex-wrap: wrap;
+  }
 }
