--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,17 +1,26 @@
+.gallery-block {
+  padding-bottom: 100px;
+}
+
 .swiper-container {
-  width: 1200px;
-  height: 100%;
   position: relative;
   margin: 0 auto;
   overflow: hidden;
 }
-
-.swiper-wrapper {
-    display: flex;
-    justify-content: space-between;
+.gallery-title {
+  text-transform: var(--text-transform-upper);
+  color: var(--color-secondary-black);
+  margin-bottom: 50px;
+  font-size: 50px;
+  line-height: 1.5;
 }
 
-.gallery__image{
+.swiper-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.gallery__image {
   width: 380px;
   height: 280px;
 }
@@ -55,15 +64,41 @@
     padding: 10px;
     border-radius: 5px;
     z-index: 1;
+
+    transition: background-color 400ms cubic-bezier(0.4, 0, 0.2, 1);
+
   }
   
   .swiper-slide:hover .info {
     display: block;
+
+    transition: background-color 400ms cubic-bezier(0.4, 0, 0.2, 1);
+
   }
 
-  .stats {
-    color: #fff;
+.stats {
+  color: #fff;
+}
+
+.swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
+  color: #fff;
+}
+
+.swiper-button-prev:after, .swiper-rtl .swiper-button-prev:after {
+  color: #fff;
+}
+
+span.swiper-pagination-bullet-active{
+  background: #fff;
+}
+
+
+  @media (max-width: 768px) {
+    .gallery__image {
+      width: 100%;
+      height: 380px;
   }
+}
 
   
   
