--- a/src/partials/hero/hero.html
+++ b/src/partials/hero/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section id="up" class="hero">
     <div class="container hero__themb">
         <div class="hero__bolock">
             <p class="hero__title-text">Not tne event. The life</p>
