--- a/src/partials/hero/hero.html
+++ b/src/partials/hero/hero.html
@@ -3,7 +3,7 @@
         <div class="hero__bolock">
             <p class="hero__title-text">Not tne event. The life</p>
             <h1 class="hero__title-h1">Burning MAN</h1>
-            <button type="button" class="hero__title-btn bookButton" data-modal-open>Book the tickets</button>
+            <button type="button" class="hero__title-text hero__title-btn bookButton">Book the tickets</button>
         </div>
     </div>
 </section>
