--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -60,6 +60,31 @@
     color: var(--color-secondary-text);
 }
 
+.modal {
+    max-width: 528px;
+    min-height: 581px;
+    padding: 40px;
+    background-color: #fff;
+}
+
+.closeModalButton {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    right: 8px;
+    top: 8px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #fff;
+    border: 1px solid rgba(0,0,0,.1);
+    cursor: pointer;
+}
+
+.modal-back {
+    fill: #000000;
+}
+
 
 @media (max-width: 1200px) {
     .hero {
