--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -52,7 +52,6 @@
 
   
 .hero__title-btn:hover,
-
 .hero__title-btn:focus {
     box-shadow: inset 0 0 20px #BFE2FF;
     outline-color: rgba(255, 255, 255, 0);
@@ -73,12 +72,20 @@
     position: fixed;
     right: 8px;
     top: 8px;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
+    width: 47px;
+    height: auto;
     background-color: #fff;
+    text-align: center;
     border: 1px solid rgba(0,0,0,.1);
     cursor: pointer;
+}
+
+.closeModalButton:hover,
+.closeModalButton:focus {
+    background: #19191980;
+    color:#fff;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .modal-back {
