--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -72,25 +72,112 @@
     position: fixed;
     right: 8px;
     top: 8px;
-    width: 47px;
-    height: auto;
+    width: 30px;
+    height: 30px;
     background-color: #fff;
     text-align: center;
     border: 1px solid rgba(0,0,0,.1);
     cursor: pointer;
+    border-radius: 50%;
 }
 
 .closeModalButton:hover,
 .closeModalButton:focus {
-    background: #19191980;
-    color:#fff;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
-
+.closeModalButton::before {
+    content: "";
+    width: 26px;
+    height: 26px;
+    position: absolute;
+    right: 0;
+    background: url("../images/close.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+}
 .modal-back {
     fill: #000000;
 }
+
+/////
+.modal {
+	font: 95% Arial, Helvetica, sans-serif;
+	max-width: 400px;
+    min-height: 430px;
+	margin: 10px auto;
+	padding: 16px;
+	background:  var(--color-secondary-text); 
+}
+.modal h1{
+	background: var(--color-secondary-black);
+	padding: 20px 0;
+	font-size: 140%;
+	font-weight: 300;
+	text-align: center;
+	color: var(--color-secondary-text);
+	margin: -16px -16px 16px -16px;
+}
+.modal input[type="text"],
+.modal input[type="date"],
+.modal input[type="datetime"],
+.modal input[type="email"],
+.modal input[type="number"],
+.modal input[type="search"],
+.modal input[type="time"],
+.modal input[type="url"],
+.modal textarea,
+.modal select 
+{
+
+	transition: all 0.30s ease-in-out;
+	outline: none;
+	box-sizing: border-box;
+	width: 100%;
+	background: var(--color-secondary-text);
+	margin-bottom: 4%;
+	border: 1px solid #ccc;
+	padding: 3%;
+	color: #555;
+	font: 95% Arial, Helvetica, sans-serif;
+    
+}
+.modal textarea {
+    height: 120px;
+    resize: none;
+}
+.modal input[type="text"]:focus,
+.modal input[type="date"]:focus,
+.modal input[type="datetime"]:focus,
+.modal input[type="email"]:focus,
+.modal input[type="number"]:focus,
+.modal input[type="search"]:focus,
+.modal input[type="time"]:focus,
+.modal input[type="url"]:focus,
+.modal textarea:focus,
+.modal select:focus
+{
+	box-shadow: 0 0 5px var(--color-secondary-black);
+	padding: 3%;
+	border: 1px solid var(--color-secondary-black);
+}
+
+.modal input[type="submit"],
+.modal input[type="button"]{
+	box-sizing: border-box;
+	width: 100%;
+	padding: 3%;
+	background: var(--color-secondary-black);
+	border-bottom: 2px solid var(--color-secondary-black);
+	border-top-style: none;
+	border-right-style: none;
+	border-left-style: none;	
+	color: var(--color-secondary-text);
+}
+.modal input[type="submit"]:hover,
+.modal input[type="button"]:hover{
+	background: var(--color-secondary-black);
+}
+////
 
 
 @media (max-width: 1200px) {
