--- a/src/partials/contacts/contacts.html
+++ b/src/partials/contacts/contacts.html
@@ -1,4 +1,4 @@
-<section class="contents"> 
+<section class="contents" id="contact"> 
     <div class="container">
         <div class="contacts-location">
             <h1 class="contacts-title">Contents</h1>
