--- a/src/partials/gallery/gallery.html
+++ b/src/partials/gallery/gallery.html
@@ -1,4 +1,4 @@
-<section class="gallery-block"> 
+<section class="gallery-block" id="gallery"> 
     <div class="container">
         <h2 class="gallery-title">Gallery</h2>
         <div class="swiper-container">
