--- a/src/partials/header/header.html
+++ b/src/partials/header/header.html
@@ -3,7 +3,7 @@
         <div class="container header-container">
         
                 <nav class="logo">
-                    <a href="#">
+                    <a href="#home">
                         <svg class="logo-link" width="31" height="48">
                             <use href="./images/sprite.svg#Logo"></use>
                         </svg>
@@ -11,10 +11,10 @@
                 </nav>
                 <div class="header-menu">
                     <ul class="header-menu__list">
-                        <li class="header-menu__list-item"><a href="#">home</a></li>
-                        <li class="header-menu__list-item"><a href="#">about</a></li>
-                        <li class="header-menu__list-item"><a href="#">gallery</a></li>
-                        <li class="header-menu__list-item"><a href="#">contacts</a></li>
+                        <li class="header-menu__list-item"><a href=".home">home</a></li>
+                        <li class="header-menu__list-item"><a href="#about">about</a></li>
+                        <li class="header-menu__list-item"><a href="#gallery">gallery</a></li>
+                        <li class="header-menu__list-item"><a href="#contact">contacts</a></li>
                     </ul>
         
                     <span class="header-number"><a href="#">+1 893 839-23-64</a></span>
@@ -46,12 +46,11 @@
                 <nav class="mobile-menu__nav"> 
                     <ul class="mobile-menu__list"> 
                         <li class="mobile-menu__item"> 
-                            <a href="#" class="mobile-menu__link">Home</a> 
+                            <a href=".home" class="mobile-menu__link">Home</a> 
                         </li> 
-                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">About</a></li>
-                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">Gallery</a></li> 
-                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">Contacts</a></li> 
-                        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link"></a></li> 
+                        <li class="mobile-menu__item"><a href="#about" class="mobile-menu__link">About</a></li>
+                        <li class="mobile-menu__item"><a href="#gallery" class="mobile-menu__link">Gallery</a></li> 
+                        <li class="mobile-menu__item"><a href="#contact" class="mobile-menu__link">Contacts</a></li> 
                     </ul> 
                     <span class="mobile-header__number"><a href="#">+1 893 839-23-64</a></span>
                 </nav>   
