--- a/src/partials/about/about.html
+++ b/src/partials/about/about.html
@@ -1,4 +1,4 @@
-<section class="about"> 
+<section class="about" id="about"> 
     <div class="container">
         <h1 class="about-title">About the event</h1>
         <div class="about-block">
