--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -80,6 +80,10 @@
   color: #fff;
 }
 
+.swiper-button-next, .swiper-button-prev {
+  z-index: 1!important;
+}
+
 .swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
   color: #fff;
 }
