--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -57,16 +57,20 @@
     padding: 20px 14px;
     background-color: #000;
     top: 0;
-    right: 0;
-    height: 100vw;
+    right: -300;
+    height: 100vh;
+    width: 250px;
     transition: transform .25s cubic-bezier(.4,0,.2,1),opacity .25s cubic-bezier(.4,0,.2,1);
 }
 
+.mobile-menu__nav {
+    margin-top: 40px;
+}
+
 .mobile-menu__item {
-    padding-bottom: 11px;
-    font-size: 14px;
+    padding-bottom: 14px;
+    font-size: 16px;
     line-height: 1.3;
-    text-align: start;
 }
 
 
@@ -84,6 +88,8 @@
 
 
 .mobile__mini-btn {
+    position: absolute;
+    right: 14px;
     background-color: transparent;
     border: none;
     }
@@ -100,6 +106,8 @@
 .mobile-menu.is-open {
     opacity: 1;
     transform: translateX(0);
+    right: 0;
+    transition: transform .25s cubic-bezier(.4, 0, .2, 1), opacity .25s cubic-bezier(.4, 0, .2, 1);
     }
 // end
 
