--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -157,3 +157,13 @@
         display: block;
     }
 }
+
+@media screen and (max-width: 480px) {
+    .header-container {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .mobile-menu {
+        width: 200px;
+    }
+}
