--- a/src/sass/_up.scss
+++ b/src/sass/_up.scss
@@ -25,3 +25,9 @@
     fill: #fff;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+@media screen and (max-width: 480px) {
+    .pageup {
+        right: 15px;
+    }
+}
