--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -182,7 +182,9 @@
 	background: var(--color-secondary-black);
 }
 ////
-
+.error {
+    color: red;
+}
 
 @media (max-width: 1200px) {
     .hero {
